[package]
name = "mc_schem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["derive","strum_macros"] }
hematite-nbt = "0.5.2"
ndarray = "0.15.6"
compress = {version="0.2.1", features = ["zlib"]}
