[package]
name = "mc_schem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["derive","strum_macros"] }
ndarray = "0.15.6"
fastnbt = "2.4.4"
flate2 = { version = "1.0.28", features = [] }
libmath = "0.2.1"
