[package]
name = "mc_schem"
version = "1.0.1"
edition = "2021"
authors = ["Joseph <tokinobug@163.com>"]
rust-version = "1.75"
description = "A library to read, create, modify and write various Minecraft schematic files"
readme = "README.md"
homepage = "https://github.com/SlopeCraft/mc_schem"
repository = "https://github.com/SlopeCraft/mc_schem"
license = "GPL-3.0-or-later"
#license-file = "LICENSE"
keywords = ["Minecraft"]
categories = ["game-development"]
include = ["/src", "/docs", "/c_sources", "/cmake", "/CMakeLists.txt"]

# Example of customizing the library in Cargo.toml.
[lib]
crate-type = ["rlib", "cdylib"]
bench = false
#path = "src"

[[bin]]
name = "schemtool"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26.1", features = ["derive", "strum_macros"] }
ndarray = "0.15.6"
fastnbt = "2.4.4"
flate2 = { version = "1.0.28", features = [] }
libmath = "0.2.1"
rand = "0.8.5"
static_assertions = "1.1.0"
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.34"
